--- a/CarritoVersion95/Views/Panel/MiPanel.cshtml
+++ b/CarritoVersion95/Views/Panel/MiPanel.cshtml
@@ -14,10 +14,10 @@
         <p class="card-text">Bienvenido a deTiendas.com</p>
 
 
-        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Cuenta" asp-action="MiCuenta">Cambiar contraseña</a>
-        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Cuenta" asp-action="MisPedidos">Mis Pedidos</a>
-        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Tiendas" asp-action="ListaProductosAPI">Ver productos</a>
-        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Tiendas" asp-action="Carrito">Ir a mi carrito</a>
+        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Cuenta" asp-action="MiCuenta"><i class="fa fa-user-circle"></i> Cambiar contraseña</a>
+        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Cuenta" asp-action="MisPedidos"><i class="fa fa-box-open"></i> Mis Pedidos</a>
+        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Tiendas" asp-action="ListaProductosAPI"><i class="fa fa-store"></i> Ver productos</a>
+        <a class="btn btn-secondary btn-lg btn-block" asp-controller="Tiendas" asp-action="Carrito"><i class="fa fa-shopping-cart"></i> Ir a mi carrito</a>
 
     </div>
 </div>
