arreglos design e iconos

--- a/CarritoVersion95/Views/Cuenta/MisPedidos.cshtml
+++ b/CarritoVersion95/Views/Cuenta/MisPedidos.cshtml
@@ -6,11 +6,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>MisPedidos</h1>
+<h1 class="display-4">Mis Pedidos</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
 <table class="table">
     <thead>
         <tr>
