--- a/CarritoVersion95/Views/Tiendas/ListaProductosAPI.cshtml
+++ b/CarritoVersion95/Views/Tiendas/ListaProductosAPI.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Todos los productos</h1>
+<h1 class="display-4">Todos los productos</h1><br />
 
 
 
