--- a/CarritoVersion95/Views/Cuenta/MiCuenta.cshtml
+++ b/CarritoVersion95/Views/Cuenta/MiCuenta.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>MiCuenta</h1>
+<h1 class="display-4">MiCuenta</h1>
 
 <div class="card" style="width: 30rem;">
 
