--- a/CarritoVersion95/Views/Login/Registrarse.cshtml
+++ b/CarritoVersion95/Views/Login/Registrarse.cshtml
@@ -4,7 +4,7 @@
     <div class="row justify-content-center align-items-center" style="height:50vh">
         <div class="col-4">
             <div class="card">
-                <div class="card-header">Registrarse</div>
+                <div class="card-header text-center">Registrarse</div>
                 <div class="card-body">
                     <form method="post" asp-action="Registrarse" asp-controller="Login">
                         <div class="form-group">
