--- a/CarritoVersion95/Views/Tiendas/FinalizarCompra.cshtml
+++ b/CarritoVersion95/Views/Tiendas/FinalizarCompra.cshtml
@@ -5,30 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Compra Finalizada</h1>
+<h1 class="display-4">Compra Finalizada</h1>
 
 <div>
-    <h4>Pedido</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPedido)
+        <dt class="col-sm-2">
+            Numero de pedido:
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdPedido)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdUsuario)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdUsuario)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PrecioTotal)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PrecioTotal)
-        </dd>
+
     </dl>
 </div>
 
@@ -43,13 +31,7 @@
                 Precio
             </th>
             <th>
-                IdProducto
-            </th>
-            <th>
-               IdTienda
-            </th>
-            <th>
-               NombreProducto
+                Producto
             </th>
             <th></th>
         </tr>
@@ -65,16 +47,25 @@
                     @Html.DisplayFor(modelItem => item.Precio)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.IdProducto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IdTienda)
-                </td>
-                <td>
                     @Html.DisplayFor(modelItem => item.NombreProducto)
                 </td>
-                
+
             </tr>
         }
     </tbody>
 </table>
+
+
+
+
+<div>
+    <hr />
+    <d1 class="row">
+        <dt class="col-sm-2">
+           Precio total: $
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PrecioTotal)
+        </dd>
+    </d1>
+</div>
