--- a/CarritoVersion95/Views/Home/Index.cshtml
+++ b/CarritoVersion95/Views/Home/Index.cshtml
@@ -2,10 +2,44 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-1">deTodo</h1>
-        <h1 class="display-4">La mejor tienda de tecnología de Buenos Aires</h1>
-        <br /><br /><br />
-                    <p>Empezamos? <br /><br /><a class="btn btn-primary" asp-controller="Tiendas" asp-action="ListaProductosAPI">Ver productos</a></p>
+<div class="text-center">
+    <h1 class="display-1">deTodo</h1>
+    <h1 class="display-4">La mejor tienda de tecnología de Buenos Aires</h1>
+    <br /><br /><br />
+    <p>¿Empezamos? <br /><br /><a class="btn btn-primary" asp-controller="Tiendas" asp-action="ListaProductosAPI">Ver productos</a></p>
+</div>
+<!-- Slideshow container -->
+<div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="https://cdn.pixabay.com/photo/2020/04/18/20/01/background-5060836_960_720.jpg " style="width:100%">
+        <div class="text">Caption Text</div>
     </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="https://cdn.pixabay.com/photo/2016/02/19/10/00/laptop-1209008_960_720.jpg" style="width:100%">
+        <div class="text">Caption Two</div>
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/06/18/home-office-1867761_960_720.jpg" style="width:100%">
+        <div class="text">Caption Three</div>
+    </div>
+
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+</div>
 
