--- a/CarritoVersion95/Views/Login/Login.cshtml
+++ b/CarritoVersion95/Views/Login/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Usuario
 @{
-	ViewData["Title"] = "Login";
-	Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewData["Title"] = "Login";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
@@ -14,12 +14,12 @@
                 <div class="card-body">
                     <form method="post" asp-action="Login" asp-controller="Login">
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="email" asp-for="email" required />
+                            <input type="email" class="form-control" placeholder="email" asp-for="email" id="emailInput" />
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" placeholder="contraseña" asp-for="contrasenia" required />
                         </div>
-                        <input type="submit" value="Login" class="btn btn-primary" />
+                        <input type="submit" onclick="validarNombre()" value="Login" class="btn btn-primary" />
 
                     </form>
                 </div>
@@ -29,10 +29,24 @@
                         No tenés cuenta?
                         <a class="card-link" asp-action="Registrarse" asp-controller="Login">Registrate</a>
                     </li>
-                    </ul>
+                </ul>
 
 
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    // Validacion JavaScript de Email y nos deja personalizar el mensaje de error.
+    function validarNombre() {
+        var inputParaValidar = document.getElementById("emailInput");
+
+        if (inputParaValidar.value == "") {
+            inputParaValidar.setCustomValidity("Debes ingresar tu email");
+        } else {
+            inputParaValidar.setCustomValidity("");
+        }
+
+    }
+</script>
